gccida/g1/gen_split_958
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_split_958/src/insn-emit.c:8761:30: error: use of undeclared identifier 'machine_mode'
operands[1] = gen_lowpart( ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), operands[1]); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_split_958/src/insn-emit.c:8762:30: error: use of undeclared identifier 'machine_mode'
operands[3] = gen_lowpart( ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), operands[3]); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_split_958/src/insn-emit.c:8763:21: error: use of undeclared identifier 'machine_mode'
v1 = gen_lowpart( ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), operands[4]); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_split_958/src/insn-emit.c:8766:30: error: use of undeclared identifier 'machine_mode'
v3 = gen_rtx_fmt_ee( MULT, ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), operands[1], operands[2]); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_split_958/src/insn-emit.c:8767:30: error: use of undeclared identifier 'machine_mode'
v4 = gen_rtx_fmt_ee( PLUS, ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), v3, v2); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_split_958/src/insn-emit.c:8768:30: error: use of undeclared identifier 'machine_mode'
v5 = gen_rtx_fmt_ee( PLUS, ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), v4, v1); 
                             ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_split_958/src/obj/insn-emit.o] Error 1
